# sff-adaptersplitter

./: .gitignore  CMakeLists.txt  INSTALL  README.md
src/: CMakeLists.txt  main.cpp  sff_adaptersplitter.cpp  sff_splitByAdapter.h
src/AhoCorasick/: StdAfx.cpp  SuffixTrie.cpp  SuffixTrie.h
